# loco-playground

./: Cargo.toml  README.md  justfile
.github/workflows/: reuse-ci.yml
docker-compose/: zitadel.docker-compose.yaml
scripts/: new-service.sh
services/api/: Cargo.toml
services/api/src/: app.rs
services/api/src/controllers/: home.rs
services/api/tests/requests/: home.rs
services/frontend/: Cargo.toml
services/frontend/config/: development.yaml  test.yaml
services/frontend/examples/: playground.rs
services/frontend/tests/models/: users.rs
services/frontend/tests/requests/: auth.rs  notes.rs  prepare_data.rs  user.rs
services/frontend/tests/tasks/: seed.rs
shared/initializers/: Cargo.toml
shared/initializers/src/: lib.rs  openfga.rs
shared/openfga/: Cargo.toml  docker-compose.yaml  justfile
shared/openfga/src/: error.rs  lib.rs  openfga.rs
